--- a/projects/user/src/app/dashboard/tasks/components/list-tasks/list-tasks.component.html
+++ b/projects/user/src/app/dashboard/tasks/components/list-tasks/list-tasks.component.html
@@ -11,7 +11,7 @@
       <div class="card mt-3" >
         <div class="card-body">
           <h2 class="card-title">{{item.title}}</h2>
-          <img [src]="'https://crud-54dk.onrender.com/'+ item.image">
+          <img [src]="'https://crud-back-k13x.onrender.com/'+ item.image">
           <p class="card-subtitle mb-2 text-muted">{{"tasks.deadline"|translate}} {{item.deadline}}</p>
           <p class="card-text">{{item.description }}</p>
           <a  class="card-link"  mat-raised-button color="basic" routerLink="/tasks/{{item._id}}">{{"tasks.details"|translate}}</a>
