--- a/projects/admin/src/app/dashboard/tasks-admin/components/list-tasks/list-tasks.component.html
+++ b/projects/admin/src/app/dashboard/tasks-admin/components/list-tasks/list-tasks.component.html
@@ -60,7 +60,7 @@
             <!-- Position Column -->
             <ng-container matColumnDef="position">
               <th mat-header-cell *matHeaderCellDef> {{"tasks.prev"|translate}} </th>
-              <td mat-cell *matCellDef="let element;let index = index"> <img [src]="'https://crud-54dk.onrender.com/'+ element.image"> </td>
+              <td mat-cell *matCellDef="let element;let index = index"> <img [src]="'https://crud-back-k13x.onrender.com/'+ element.image"> </td>
             </ng-container>
 
             <!-- Name Column -->
