--- a/projects/user/src/app/dashboard/tasks/components/task-details/task-details.component.html
+++ b/projects/user/src/app/dashboard/tasks/components/task-details/task-details.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="imageBox">
-        <img [src]="'https://crud-54dk.onrender.com/'+ taskDetails?.image" alt='{{"img.NotAvailable"|translate}}' class="w-100">
+        <img [src]="'https://crud-back-k13x.onrender.com/'+ taskDetails?.image" alt='{{"img.NotAvailable"|translate}}' class="w-100">
     </div>
     <div  class="d-flex justify-content-between align-items-baseline my-3">
         <h1 class="card-title ">{{taskDetails?.title}}</h1>
