--- a/projects/admin/src/app/dashboard/layout/layout.component.scss
+++ b/projects/admin/src/app/dashboard/layout/layout.component.scss
@@ -14,7 +14,7 @@ nav {
 
 
 
-  .navbar-nav.mr-auto{flex: auto!important;}
+  .navbar-nav.mr-auto.flex{flex: auto}
   a {
       font-size: 20px;
       color: #FFF!important;
