--- a/projects/admin/src/app/dashboard/tasks-admin/components/add-task/add-task.component.html
+++ b/projects/admin/src/app/dashboard/tasks-admin/components/add-task/add-task.component.html
@@ -26,7 +26,7 @@
                 <div class="col-md-12 my-3">
                  <label for="selectFile" class="btn btn-primary">{{"addTask.img"|translate}}</label>
                  <span>{{fileName}}</span>
-                 <input type="file" (change)="selectImage($event)" hidden id="selectFile" class="form-control">
+                 <input type="file"  accept="image/*" (change)="selectImage($event)" hidden id="selectFile" class="form-control">
                 </div>
                 <div class="col-md-12">
                     <mat-form-field appearance="outline" class="w-100">
@@ -50,7 +50,7 @@
     <footer class="tw-p-6">
         <div class="d-flex justify-content-center align-items-center">
             <button *ngIf="!data" mat-flat-button class="btn btn-success py-1 px-5 mx-2"  (click)="createTask()" [disabled]="newTaskForm.invalid">{{"addTask.create"|translate}}</button>
-            <button *ngIf="data" mat-flat-button class="btn btn-success py-1 px-5 mx-2"  (click)="updateTask()" [disabled]="newTaskForm.invalid">{{"addTask.create"|translate}}</button>
+            <button *ngIf="data" mat-flat-button class="btn btn-success py-1 px-5 mx-2"  (click)="updateTask()" [disabled]="newTaskForm.invalid">{{"addTask.update"|translate}}</button>
 
             <button mat-flat-button class="btn btn-danger py-1 px-5"  (click)="close()" >{{"addTask.close"|translate}}</button>
           </div>
