--- a/projects/admin/src/app/dashboard/tasks-admin/components/list-tasks/list-tasks.component.html
+++ b/projects/admin/src/app/dashboard/tasks-admin/components/list-tasks/list-tasks.component.html
@@ -32,11 +32,14 @@
                     <mat-form-field appearance="outline" class="w-100">
                         <mat-label>{{"tasks.statusSearch"|translate}}</mat-label>
                         <mat-select (selectionChange)="selectStatus($event)">
-                          <mat-option >
+                          <mat-option value="">
                             {{"tasks.statusChoose"|translate}}
                           </mat-option>
-                            <mat-option *ngFor="let item of status" [value]="item?.name">
-                              {{item?.name}}
+                          <mat-option value="Complete">
+                           {{"tasks.Complete"|translate}}
+                          </mat-option>
+                            <mat-option  value="In-Progress">
+                              {{"tasks.inComplete"|translate}}
                             </mat-option>
                           </mat-select>
                     </mat-form-field>
@@ -54,13 +57,15 @@
                 </div>
         </div>
     </form>
-    <div class="listBox">
-        <table *ngIf="(dataSource).length != 0" mat-table [dataSource]="dataSource" class="mat-elevation-z8  w-100 mt-2">
+
+    <!-- <div class="listBox"> -->
+    <div class="mat-elevation-z8">
+        <table  mat-table [dataSource]="dataSource" class="w-100 mt-2">
 
             <!-- Position Column -->
             <ng-container matColumnDef="position">
               <th mat-header-cell *matHeaderCellDef> {{"tasks.prev"|translate}} </th>
-              <td mat-cell *matCellDef="let element;let index = index"> <img [src]="'https://crud-back-k13x.onrender.com/'+ element.image"> </td>
+              <td mat-cell *matCellDef="let element;let index = index"> <img [src]="'https://crud-back-k13x.onrender.com/'+ element.image" alt="" onerror="this.onerror=null; this.src='assets/no-photo.jpg'"> </td>
             </ng-container>
 
             <!-- Name Column -->
@@ -94,15 +99,24 @@
               </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns | paginate: { id: 'tasks',
-            itemsPerPage: 10,
-            currentPage: page,
-            totalItems: total }"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+         <!-- When data not Exist -->
+         <tr *matNoDataRow>
+          <td class="mat-cell No" colspan="6">
+            {{"tasks.no-Matching"|translate}}
+          </td>
+        </tr>
+        <!-- When data not Exist -->
+
+
           </table>
-          <h1 class="text-center mb-0 " *ngIf="(dataSource).length === 0">{{"tasks.no-Matching"|translate}}</h1>
-          <div class="d-flex justify-content-center mt-3">
+          <mat-paginator [pageSizeOptions]="[5,10,25,100]"></mat-paginator>
+          <!-- <h1 class="text-center mb-0 " *ngIf="(dataSource).length === 0">{{"tasks.no-Matching"|translate}}</h1> -->
+          <!-- <div class="d-flex justify-content-center mt-3">
           <pagination-controls   previousLabel='{{"ngx-pagination.previous"|translate}}' nextLabel='{{"ngx-pagination.next"|translate}}' (pageChange)="changePage($event)" id='tasks'></pagination-controls>
-        </div>
+        </div> -->
     </div>
+    <!-- </div> -->
 
 
