--- a/projects/admin/src/app/dashboard/tasks-admin/components/list-tasks/list-tasks.component.scss
+++ b/projects/admin/src/app/dashboard/tasks-admin/components/list-tasks/list-tasks.component.scss
@@ -51,6 +51,9 @@ button {
                 color: #FFF;
                 // font-size: 150%;
                 // margin-top: 25px;
+
+                  text-align: center;
+
             }
         }
     }
@@ -66,4 +69,9 @@ table{
 
 .w-20 {
     width: 20%!important;
+}
+
+.mat-cell.No{
+  font-size: 21px;
+  text-align: center;
 }
