--- a/projects/user/src/app/dashboard/layout/layout.component.html
+++ b/projects/user/src/app/dashboard/layout/layout.component.html
@@ -6,18 +6,24 @@
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+    <div class="navbar-collapse collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto flex">
         <li class="nav-item active">
           <a class="nav-link" routerLink="/tasks" routerLinkActive="active"> {{"navBar.AllTasks"|translate}} <span class="sr-only">(current)</span></a>
         </li>
       </ul>
-     <div class="d-flex nav-item">
+     <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
       <a class="nav-link" (click)="signOut()" routerLink="/login"> {{"navBar.logOut"|translate}} </a>
+    </li>
       <!-- <a class="nav-link"  (click)="changeLanguage()"> {{lang== 'en' ? "عـربـي" : "English"}} </a> -->
+      <li class="nav-item active">
       <a class="nav-link"  role="button" *ngIf="lang=='ar'" (click)="changeLanguage('en')"> English </a>
+    </li>
+      <li class="nav-item active">
       <a class="nav-link" role="button"  *ngIf="lang=='en'" (click)="changeLanguage('ar')"> عربي </a>
-     </div>
+    </li>
+     </ul>
     </div>
   </div>
 
