--- a/projects/user/src/app/dashboard/tasks/components/list-tasks/list-tasks.component.html
+++ b/projects/user/src/app/dashboard/tasks/components/list-tasks/list-tasks.component.html
@@ -2,18 +2,21 @@
 <div class="mt-4" >
 
   <div class="row">
+    <input (keyup)="page=$event" type="text" [ngClass]="{'rtl': langu=='ar'}" placeholder='{{"tasks.search"|translate}}' class="form-control" [(ngModel)]="titleFilter.title">
 
-      <input type="text" [ngClass]="{'rtl': langu=='ar'}" placeholder='{{"tasks.search"|translate}}' class="form-control" [(ngModel)]="titleFilter.title">
+  </div>
+    <div class="row jus">
+
     <div class="col-md-3" *ngFor="let item of dataSource|filterBy:titleFilter | paginate: { id: 'tasks',
-    itemsPerPage: 5,
+    itemsPerPage: 8,
     currentPage: page,
     totalItems: totalItems };   let index = index">
       <div class="card mt-3" >
         <div class="card-body">
           <h2 class="card-title">{{item.title}}</h2>
-          <img [src]="'https://crud-back-k13x.onrender.com/'+ item.image">
-          <p class="card-subtitle mb-2 text-muted">{{"tasks.deadline"|translate}} {{item.deadline}}</p>
-          <p class="card-text">{{item.description }}</p>
+          <img [src]="'https://crud-back-k13x.onrender.com/'+ item.image" alt="" onerror="this.onerror=null; this.src='assets/no-photo.jpg'">
+          <p class="card-subtitle mb-2 text-light">{{"tasks.deadline"|translate}} {{item.deadline}}</p>
+          <p class="card-text text-light">{{item.description }}</p>
           <a  class="card-link"  mat-raised-button color="basic" routerLink="/tasks/{{item._id}}">{{"tasks.details"|translate}}</a>
           <button  mat-raised-button color="warn" (click)="complete(item)">{{"tasks.complete"|translate}}</button>
         </div>
@@ -23,7 +26,7 @@
   </div>
   <h1 class="text-center mb-0" *ngIf="(dataSource |filterBy: titleFilter).length === 0">{{"tasks.no-Matching"|translate}}</h1>
   <div  class="d-flex justify-content-center mt-3">
-    <pagination-controls previousLabel='{{"ngx-pagination.previous"|translate}}' nextLabel='{{"ngx-pagination.next"|translate}}' (pageChange)="changePage($event)" id='tasks'></pagination-controls>
+    <pagination-controls previousLabel='{{"ngx-pagination.previous"|translate}}' nextLabel='{{"ngx-pagination.next"|translate}}' (pageChange)="page=$event" id='tasks'></pagination-controls>
   </div>
 
 </div>
