--- a/projects/user/src/app/dashboard/tasks/components/task-details/task-details.component.scss
+++ b/projects/user/src/app/dashboard/tasks/components/task-details/task-details.component.scss
@@ -1,18 +1,18 @@
 .imageBox {
     height: 250px;
-    img {
-    height: 250px;
+img {
+  width: 100%;
+  height: 100%;
 
-      color: green;
-      font: 40px Impact;
 
-    }
 }
+}
+
 
 .card-text{
   font-size: x-large;
 }
-.card-subtitle.mb-2.text-muted{
+.card-subtitle.mb-2.text-light{
   font-size: x-large;
 
 }
