--- a/projects/user/src/styles.scss
+++ b/projects/user/src/styles.scss
@@ -6,20 +6,17 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow-x:
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+
 body{
   background-image: url('assets/76.jpg');
-  position:relative
+  position:relative;
+  min-height:100vh;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 }
 footer{
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  color: white;
-  text-align: center;
+  margin-top: auto;
+
 }
-.footer-basic {
-  padding:45px 0;
-  // background-color:#ffffff;
-  // color:#4b4c4d;
-}
+
