--- a/projects/admin/src/app/dashboard/manage-users/components/users/users.component.html
+++ b/projects/admin/src/app/dashboard/manage-users/components/users/users.component.html
@@ -1,3 +1,6 @@
+<div  class="mt-4">
+
+
 <mat-form-field appearance="standard">
   <mat-label>{{"users.FilterTable"|translate}}</mat-label>
   <input matInput placeholder="" search (keyup)="applyFilter($event)">
@@ -16,7 +19,7 @@
           <!-- <span *ngIf="(dataSource |filterBy: userFilter).length === 0">No matching elements</span> -->
 
             <!-- Position Column -->
-            <ng-container matColumnDef="position">
+            <ng-container  matColumnDef="position">
               <th mat-header-cell *matHeaderCellDef>{{"users.no"|translate}}</th>
               <td mat-cell *matCellDef="let element;let index = index"> {{index + 1}} </td>
             </ng-container>
@@ -24,13 +27,13 @@
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef>{{"users.name"|translate}}</th>
+              <th mat-header-cell *matHeaderCellDef class="align">{{"users.name"|translate}}</th>
               <td mat-cell *matCellDef="let element"> {{element.username}} </td>
             </ng-container>
 
             <!-- Weight Column -->
             <ng-container matColumnDef="email">
-              <th mat-header-cell *matHeaderCellDef>{{"users.email"|translate}}</th>
+              <th mat-header-cell *matHeaderCellDef class=" align">{{"users.email"|translate}}</th>
               <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
 
@@ -42,7 +45,7 @@
 
 
             <ng-container matColumnDef="actions" >
-                <th mat-header-cell *matHeaderCellDef class="w-20">{{"users.actions"|translate}}</th>
+                <th mat-header-cell *matHeaderCellDef  class="w-20 align">{{"users.actions"|translate}}</th>
                 <td mat-cell *matCellDef="let element; let index = index"  >
                     <button  mat-raised-button color="warn" class="mx-2" (click)="deleteTask(element._id , element.assignedTasks)">{{"users.delete"|translate}}</button>
                     <button (click)="changeUserStatus(element._id,element.status,element.assignedTasks)"  mat-raised-button color="primary"*ngIf="element.status=='Active'">{{"users.in-Active"|translate}}</button>
@@ -74,4 +77,5 @@
     </div> -->
 
 <!-- </div> -->
+</div>
 </div>
