--- a/projects/admin/src/app/dashboard/tasks-admin/components/list-tasks/list-tasks.component.html
+++ b/projects/admin/src/app/dashboard/tasks-admin/components/list-tasks/list-tasks.component.html
@@ -91,7 +91,7 @@
               </ng-container>
 
             <ng-container matColumnDef="actions" >
-                <th mat-header-cell *matHeaderCellDef class="w-20"> {{"tasks.actions"|translate}} </th>
+                <th mat-header-cell *matHeaderCellDef class="w-20 align"> {{"tasks.actions"|translate}} </th>
                 <td mat-cell *matCellDef="let element">
                     <button class="btn btn-warning" mat-raised-button (click)="updateTask(element)">{{"tasks.update"|translate}}</button>
                     <button  mat-raised-button color="warn" (click)="deleteTask(element._id)">{{"tasks.delete"|translate}}</button>
@@ -110,13 +110,13 @@
         <!-- When data not Exist -->
 
 
-          </table>
-          <mat-paginator [pageSizeOptions]="[5,10,25,100]"></mat-paginator>
+      </table>
+      <mat-paginator [pageSizeOptions]="[5,10,25,100]"></mat-paginator>
           <!-- <h1 class="text-center mb-0 " *ngIf="(dataSource).length === 0">{{"tasks.no-Matching"|translate}}</h1> -->
           <!-- <div class="d-flex justify-content-center mt-3">
           <pagination-controls   previousLabel='{{"ngx-pagination.previous"|translate}}' nextLabel='{{"ngx-pagination.next"|translate}}' (pageChange)="changePage($event)" id='tasks'></pagination-controls>
         </div> -->
     </div>
-    <!-- </div> -->
+    </div>
 
 
